--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "actionformer"
-version = "1.0.0"
+version = "1.3.1"
 description = "ActionFormer: Localizing Moments of Actions with Transformers"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -17,9 +17,14 @@ dependencies = [
     "joblib>=1.2.0",
 ]
 
+[project.scripts]
+actionformer-train = "actionformer.train:main"
+actionformer-train-ddp = "actionformer.train_ddp:main"
+actionformer-eval = "actionformer.eval:main"
+
 [build-system]
 requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["libs*"]
+include = ["libs*", "actionformer*"]
